--- a/src/routes/SearchMovie/component/pagination/pagination.module.scss
+++ b/src/routes/SearchMovie/component/pagination/pagination.module.scss
@@ -23,14 +23,14 @@
     height: 30px;
     width: 30px;
     color: #333;
-    background-color: red;
+    background-color: rgb(133, 132, 132);
     border: 1px solid transparent;
     border-radius: 4px;
     outline: transparent;
     cursor: pointer;
 
     &:hover {
-      background-color: wheat;
+      background-color: rgba(255, 130, 130, 0.233);
     }
   }
 
@@ -47,6 +47,15 @@
     border-color: #0000;
     outline: transparent;
     cursor: default;
+  }
+
+  & > .previousItem > a,
+  & > .previousItem > a:hover,
+  & > .nextItem > a,
+  & > .nextItem > a:hover {
+    background-color: rgba(0, 0, 0, 0);
+    border-color: #0000;
+    outline: transparent;
   }
 
   & > .disabled > a {
