--- a/src/routes/SearchMovie/favorites/favorites.module.scss
+++ b/src/routes/SearchMovie/favorites/favorites.module.scss
@@ -18,15 +18,9 @@
     color: colors.$BIG_TITLE;
   }
 
-  h2 {
-    font-size: 14px;
-    font-weight: 600;
-    color: colors.$MIDDLE_TITLE;
-    padding: 10px;
-  }
-
-  .searchResult {
+  .favoritesList {
     height: 480px;
+    margin-top: 70px;
     overflow-y: auto;
 
     .itemUl {
@@ -55,7 +49,6 @@
           dt,
           dd {
             text-align: center;
-            margin-bottom: 10px;
           }
 
           dt {
@@ -69,15 +62,5 @@
         }
       }
     }
-  }
-
-  .noResult {
-    height: 480px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 600;
-    color: colors.$BIG_TITLE;
   }
 }
