--- a/src/routes/SearchMovie/SearchMovie.module.scss
+++ b/src/routes/SearchMovie/SearchMovie.module.scss
@@ -30,6 +30,8 @@
     overflow-y: auto;
 
     .itemUl {
+      transition: all 0.5s;
+
       li {
         width: 260px;
         height: 130px;
@@ -40,12 +42,33 @@
         background: rgba(83, 81, 81, 0.219);
         background: linear-gradient(160deg, rgba(31, 12, 12, 0.411) 0%, rgba(9, 9, 9, 1) 94%);
 
+        .itemCard {
+          display: flex;
+          width: 200%;
+          transition: all 0.5s;
+
+          .addFavorites {
+            display: flex;
+            width: 260px;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+
+            .favoriteBtn {
+              color: #333;
+            }
+          }
+        }
+
         + li {
           margin: 15px 0;
         }
 
         dl {
           display: flex;
+          width: 260px;
+          margin: 0 60px 0 0;
           align-items: center;
 
           > div {
