--- a/src/routes/Routes.module.scss
+++ b/src/routes/Routes.module.scss
@@ -1,4 +1,7 @@
 @use '/src/styles/constants/colors';
+@use '/src/styles/constants/levels';
+@use '/src/styles/mixins/flexbox';
+@use '/src/styles/mixins/position';
 
 .app {
   display: flex;
